--- a/DemoMVC.WebUi/Views/Roles/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Roles/Index.cshtml
@@ -18,6 +18,7 @@
     bool AllowedEdit = _base.CheckPermission(formCode, AccessPermission.IsEdit);
     bool AllowedAdd = _base.CheckPermission(formCode, AccessPermission.IsAdd);
     bool AllowedDelete = _base.CheckPermission(formCode, AccessPermission.IsDelete);
+    
 }
 
 <h2 class="text-center fw-bold mt-4">Roles List</h2>
@@ -37,7 +38,12 @@
               columns.Bound(c => c.IsActive).Width("5%").HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center-text" }).ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close'></i># } #").Title("Active").Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
               if (role == "sadmin")
               {
+
+
                   columns.Bound(c => c.Id).HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center_text" }).ClientTemplate("<div class='k_action_table'><a title='Permission' style='width:18px;' class='fa fa-cog' href='" + Url.Action("ViewPermission","FormRoleMapping") + "/#=Id#'" + "></a>" + (AllowedEdit ? "<a title='Edit' href='" + Url.Action("Create", "Roles") + "/#=Id#'" + "><i class='fa fa-edit'></i></a>" : "") + "</div>").Filterable(false).Title("Action").Width(100).Sortable(false);
+                  columns.Bound(c => c.Id).HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center_text" }).ClientTemplate("<div class='k_action_table'>" + (AllowedDelete ? "<button title='Delete' class='btn btn-sm btn-danger' onclick='confirmDelete(#=Id#)'>Delete</button>" : "") +
+                  "</div>").Filterable(false).Title("Delete").Width("5%").Sortable(false);
+
               }
               else
               {
@@ -73,17 +79,54 @@
         $('#gridRoles').data('kendoGrid').refresh();
     });
 
-    function fnConfirmDeleteRecord(id, name) {
-        if (confirm('Are you sure you want to delete ' + name + '?')) {
-            fnCallAjaxHttpPostEvent('@Url.Action("Delete", "Roles")', { id: id }, true, true, fnOnDeleteRecordSuccess);
+    function confirmDelete(roleId) {
+    Swal.fire({
+        title: 'Are you sure?',
+        text: 'This role will be permanently deleted!',
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#d33',
+        cancelButtonColor: '#3085d6',
+        confirmButtonText: 'Yes, delete it!',
+        cancelButtonText: 'Cancel'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            $.ajax({
+                url: '@Url.Action("DeleteRole", "Roles")',
+                type: 'POST',
+                data: { id: roleId },
+                success: function (response) {
+                    if (response.success) {
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Deleted!',
+                            text: 'Role deleted successfully.',
+                            showConfirmButton: false,
+                            timer: 2000
+                        });
+                        $('#gridRoles').data('kendoGrid').dataSource.read();
+                    } else {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error!',
+                            text: response.message,
+                            confirmButtonColor: '#d33'
+                        });
+                    }
+                },
+                error: function () {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Oops!',
+                        text: 'An error occurred while processing your request.',
+                        confirmButtonColor: '#d33'
+                    });
+                }
+            });
         }
-    }
-    function fnOnDeleteRecordSuccess(data) {
-        if (data.error)
-            fnShowKendoErrorMessage(data.error);
-        else if (data.redirect) {
-            var grid = $('#gridRoles').data('kendoGrid');
-            grid.dataSource.read();
-        }
+    });
     }
 </script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
