--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -39,6 +39,20 @@
     <script src="~/Content/js/toast.js"></script>
     <script src="~/Content/js/moment.js"></script>
     @Scripts.Render("~/bundles/kendo")
+    <style>
+        .gradient-title {
+            margin-top:15px;
+            font-size:30px;
+            font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+            background: linear-gradient(to right, #ff8c00, #ff0080);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+       .header_row{
+           background-color:black;
+       }
+   
+    </style>
 </head>
 <body class="left_menu_horizontal">
     <style id="gridPageLoader">
@@ -59,40 +73,37 @@
             opacity: 0;
         }
     </style>
-    <header class="header">
-        <div class="container container-fluid no_space">
+        
+    <nav>
+        <div>
             <div class="header_row">
-                <div class="brand">
-                    <div class="brand_row">
-                        <a href="@Url.Action("Index","Home")">
-                            <p>DEMO MVC</p>
-                        </a>
-                    </div>
+                <div class="brand" style="background-color:black ; padding-left:50px;">
+                    <p class="gradient-title">DEMO MVC</p>
                 </div>
-                <div class="header_right_col clearfix">
+                <div class="header_right_col clearfix" >
                     @{
                         if (Session["Menu"] != null)
                         {
                             List<DemoMVC.Models.MenuVW> _menu = (List<DemoMVC.Models.MenuVW>)Session["Menu"];
-                            <div class="head_menu_list">
+                            <div class="head_menu_list" style="color:white">
                                 <ul>
                                     @foreach (var _main in _menu)
                                     {
                                         <li class="head_menu_dropdown" id="@_main.FormAccessCode" data-facode="@_main.FormAccessCode">
-                                            <a href="@Url.Content(_main.NavigateURL)">
+                                            <a href="@Url.Content(_main.NavigateURL)" style="color:white">
                                                 <span class="menu_text">@_main.Name</span>
                                             </a>
                                             @if (_main.SubMenu != null)
                                             {
 
 
-                                                <div class="dropdown-menu head_menu_dropdown_content">
+                                                <div class="dropdown-menu head_menu_dropdown_content" >
                                                     <ul>
                                                         @foreach (var _sub in _main.SubMenu)
                                                         {
                                                             <li class="head_menu_dropdown" data-facode="@_sub.FormAccessCode">
-                                                                <a href="@Url.Content(_sub.NavigateURL)">
-                                                                    <span class="menu_text">@_sub.Name</span>
+                                                                <a href="@Url.Content(_sub.NavigateURL)" style="color:black">
+                                                                    <span class="menu_text ">@_sub.Name</span>
                                                                 </a>
                                                             </li>
                                                         }
@@ -110,7 +121,7 @@
                         }
 
                     }
-                    <div class="head_right_col">
+                    <div class="head_right_col" style="padding-right:150px">
                         <div class="toprightbar">
                             @Html.Partial("_LoginPartial")
                         </div>
@@ -118,12 +129,13 @@
                 </div>
             </div>
         </div>
-    </header>
-    <div id="body">
+
+    </nav>
+    <div">
         @RenderSection("featured", required: false)
-        <div class="main_body_content">
-            <div class="main_wrapper">
-                <div class="container container-fluid no_space">
+        <div class="">
+            <div class="">
+                <div class="container">
                     @RenderBody()
                 </div>
             </div>
