--- a/DemoMVC.WebUi/Views/Question/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Question/Index.cshtml
@@ -53,7 +53,8 @@
                 "# } #" );
                 columns.Bound(c => c.Subject).Width("7%").Title("Subject");
                 columns.Bound(c => c.Type).Width("7%").Title("Answer Type");
-                columns.Bound(c => c.QuestionText).Width("50%").Title("Question");
+                columns.Bound(c => c.QuestionText).Width("50%").Title("Question")
+                .ClientTemplate("<span>#:QuestionText.substring(0, 80) #</span>");
                 columns.Bound(c => c.Difficulty).Width("7%").Title("Difficulty").ClientTemplate("#if(BadgeCode!=null && BadgeCode!=''){#" + "<span class='status' style='background:#=BadgeCode#'>#=Difficulty#</span>#} else {# #=Difficulty# #}#");
                 columns.Bound(c => c.Marks).Width("7%").Title("Marks");
                 columns.Bound(c => c.IsActive).Width("5%").HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center-text" }).ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close'></i># } #").Title("Active").Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
@@ -63,6 +64,8 @@
                     columns.Bound(c => c.QuestionId).HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center_text" }).ClientTemplate("<div class='k_action_table'>" + (AllowedEdit ? "<a title='Edit' href='" + Url.Action("Create", "Question") + "/#=QuestionId#'" + "><i class='fa fa-edit'></i></a>" : "") + "</div>").Filterable(false).Title("Edit").Width("3%").Sortable(false);
                     columns.Bound(c => c.QuestionId).HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center_text" }).ClientTemplate("<div class='k_action_table'>" + (AllowedDelete ? "<button title='Delete' class='btn btn-sm btn-danger' onclick='confirmDelete(#=QuestionId#)'>Delete</button>" : "") +
                     "</div>").Filterable(false).Title("Delete").Width("5%").Sortable(false);
+                    columns.Bound(c => c.QuestionId).HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center_text" }).ClientTemplate("<div class='k_action_table'>" + (AllowedEdit ? "<a href='javascript://' onclick=\"fnShowDetails(#= QuestionId #)\"><i class='fa fa-eye'></i></a>" : "")).Filterable(false).Title("Action").Width(70).Sortable(false);
+
                 }
                 else
                 {
@@ -95,6 +98,7 @@
 </div>
 
 <div id="imageModalContainer"></div>
+<div id="questionModelContainer"></div>
 <script>
     $(document).ready(function () {
         $('#gridQuestion').data('kendoGrid').dataSource.read();
@@ -161,6 +165,21 @@
             },
             error: function () {
                 alert("Failed to load image.");
+            }
+        });
+    }
+
+    function fnShowDetails(QuestionId) {
+        $.ajax({
+            url: '@Url.Action("GetQuestionDetails","Question")',
+            type: 'GET',
+            data: { id: QuestionId },
+            success: function (response) {
+                $("#questionModelContainer").html(response);
+                $("#questionDetailsModal").modal("show");
+            },
+            error: function () {
+                alert(" Failed To Load Data");
             }
         });
     }
